[package]
name = "uart_16550"
version = "0.2.13"
authors = ["Lachlan Sneff <lachlan.sneff@gmail.com>", "Philipp Oppermann <dev@phil-opp.com>"]
description = "Fork of uart_16550 driver"
license = "MIT"
repository = "https://github.com/rust-osdev/uart_16550"
edition = "2018"

[dependencies]
bitflags = "1.1.0"

[target.'cfg(target_arch = "x86_64")'.dependencies]
x86_64 = { path = "../../../arch/x86_64" }

[package.metadata.release]
no-dev-version = true
pre-release-replacements = [
    { file="Changelog.md", search="# Unreleased", replace="# Unreleased\n\n# {{version}} – {{date}}", exactly=1 },
]
pre-release-commit-message = "Release version {{version}}"
